# xpressclaw

./: .bazelrc  .gitignore  .gitmodules  AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml  MODULE.bazel  README.md  architecture.md  bazel-bin  bazel-out  bazel-testlogs  bazel-xpressclaw  build-cargo.ps1  build-signed.sh  build.ps1  build.sh  pyproject.toml  xpressclaw.yaml
.claude/: settings.json  settings.local.json
.githooks/: pre-commit
.github/workflows/: ci.yml  harnesses.yml  release.yml
containers/pi-agent/: AGENTS.md  Dockerfile  entrypoint.sh
crates/xpressclaw-cli/: BUILD.bazel  Cargo.toml
crates/xpressclaw-cli/src/: main.rs
crates/xpressclaw-cli/src/commands/: budget.rs  c2w_smoke.rs  chat.rs  client.rs  down.rs  init.rs  logs.rs  memory.rs  mod.rs  pi_smoke.rs  rollback_smoke.rs  sop.rs  status.rs  tasks.rs  up.rs  write_bundled_wasm.rs
crates/xpressclaw-core/: BUILD.bazel  Cargo.toml
crates/xpressclaw-core/src/: activity.rs  c2w.rs  config.rs  db.rs  error.rs  lib.rs  runtime.rs  system.rs  xclaw.rs
crates/xpressclaw-core/src/agents/: harness.rs  mod.rs  pi_rpc.rs  pi_terminal.rs  presets.rs  reconciler.rs  registry.rs  state.rs
crates/xpressclaw-core/src/budget/: manager.rs  mod.rs  rate_limiter.rs  tracker.rs
crates/xpressclaw-core/src/connectors/: deliver.rs  email.rs  file_watcher.rs  github.rs  jira.rs  manager.rs  mod.rs  registry.rs  router.rs  slack.rs  stubs.rs  telegram.rs  traits.rs  webhook.rs
crates/xpressclaw-core/src/conversations/: event_bus.rs  mod.rs  processor.rs  tools.rs
crates/xpressclaw-core/src/docker/: images.rs  manager.rs  mod.rs
crates/xpressclaw-core/src/harness/: c2w.rs  mod.rs  pi.rs  types.rs
crates/xpressclaw-core/src/llm/: anthropic.rs  llamacpp.rs  local.rs  mod.rs  openai.rs  pricing.rs  router.rs
crates/xpressclaw-core/src/memory/: hooks.rs  manager.rs  mod.rs  slots.rs  vector.rs  zettelkasten.rs
crates/xpressclaw-core/src/tasks/: board.rs  conversation.rs  dispatcher.rs  mod.rs  procedure_runner.rs  queue.rs  scheduler.rs  sop.rs
crates/xpressclaw-core/src/tools/: mcp.rs  mcp_manager.rs  mcp_stdio.rs  mod.rs  policy.rs  proxy.rs  registry.rs
crates/xpressclaw-core/src/workflows/: condition.rs  context.rs  definition.rs  engine.rs  instance.rs  manager.rs  mod.rs
crates/xpressclaw-server/: BUILD.bazel  Cargo.toml  build.rs  test.yaml
crates/xpressclaw-server/src/: echo_harness.rs  frontend.rs  lib.rs  server.rs  skills.rs  sse.rs  state.rs  xclaw_bridge.rs
crates/xpressclaw-server/src/routes/: activity.rs  agents.rs  apps.rs  browser.rs  budget.rs  connectors.rs  conversations.rs  health.rs  llm.rs  mcp_server.rs  memory.rs  mod.rs  office.rs  open_url.rs  procedures.rs  schedules.rs  settings.rs  setup.rs  skills.rs  tasks.rs  tools_proxy.rs  workflows.rs
crates/xpressclaw-tauri/: BUILD.bazel  Cargo.toml  build.rs  tauri.conf.json  xpressclaw.yaml
crates/xpressclaw-tauri/capabilities/: default.json
crates/xpressclaw-tauri/icons/: icon.icns
crates/xpressclaw-tauri/linux/: xpressclaw.desktop
crates/xpressclaw-tauri/src/: commands.rs  main.rs  tray.rs
docs/: TODO.md  commands.md  configuration.md  getting-started.md  scheduling.md
docs/adr/: ADR-000-version-control-workflow.md  ADR-001-project-overview.md  ADR-002-agent-backend-abstraction.md  ADR-003-container-isolation.md  ADR-004-memory-system.md  ADR-005-mcp-tool-system.md  ADR-006-sqlite-storage.md  ADR-007-htmx-web-ui.md  ADR-008-textual-tui.md  ADR-009-task-sop-system.md  ADR-010-budget-controls.md  (+13 more)
frontend/: BUILD.bazel  frontend.bzl  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts  xpressclaw.yaml
frontend/src/: app.css  app.html
frontend/src/lib/: TaskCard.svelte  api.ts  formatMessage.ts  utils.ts
frontend/src/lib/components/blocks/: BlockConnector.svelte  JumpArrows.svelte  JumpBlock.svelte  LoopBlock.svelte  SinkBlock.svelte  StepBlock.svelte  TriggerBlock.svelte  VariablePopup.svelte  WhenBlock.svelte
frontend/src/lib/components/flow/: BranchNode.svelte  SinkNode.svelte  TaskNode.svelte  TriggerNode.svelte
frontend/src/lib/wanix/: WanixPanel.svelte  harness.ts  wanix-bridge.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/agents/: +page.svelte
frontend/src/routes/agents/[id]/: +page.svelte  BudgetTab.svelte  ChannelsTab.svelte  LogsTab.svelte  MemoryTab.svelte  ProceduresTab.svelte  ProfileTab.svelte  PromptsTab.svelte  SchedulesTab.svelte  SkillsTab.svelte  TasksTab.svelte  ToolsTab.svelte  WorkspaceTab.svelte
frontend/src/routes/apps/[id]/: +page.svelte
frontend/src/routes/budget/: +page.svelte
frontend/src/routes/conversations/[id]/: +page.svelte
frontend/src/routes/dashboard/: +page.svelte
frontend/src/routes/memory/: +page.svelte
frontend/src/routes/procedures/: +page.svelte
frontend/src/routes/schedules/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/src/routes/settings/connectors/: +page.svelte
frontend/src/routes/settings/llm/: +page.svelte
frontend/src/routes/settings/server/: +page.svelte
frontend/src/routes/setup/: +layout.svelte  +page.svelte
frontend/src/routes/skills/: +page.svelte
frontend/src/routes/tasks/: +page.svelte
frontend/src/routes/tasks/[id]/: +page.svelte
frontend/src/routes/workflows/: +page.svelte
frontend/src/routes/workflows/[id]/: +page.svelte
frontend/src/routes/workflows/new/: +page.svelte
frontend/static/wanix/: wanix.min.js
frontend/static/wanix/wasi/worker/: lib.js
harnesses/: docker-bake.hcl
scripts/: build-pi-agent-wasm.sh
src/: README.md  app.py  board.py  budget.py  config.py  database.py  docker.py  down.py  init.py  logs.py  main.py  manager.py  pyproject.toml  registry.py  runtime.py  status.py  tasks.py  test_basic.py  up.py
tests/: __init__.py  conftest.py  test_budget.py  test_cli.py  test_config.py  test_context.py  test_conversation.py  test_exceptions.py  test_integration.py  test_tools.py  test_web.py
wanix-server/: index.mjs  package-lock.json  package.json  test-boot.mjs
wasm-agents/: wasmtime-shim
(+111 files in other folders)
