# Frontend SvelteKit build
exports_files([
    "package.json",
    "package-lock.json",
])

genrule(
    name = "build",
    srcs = glob([
        "src/**",
        "static/**",
        "*.config.*",
        "*.json",
        "postcss.config.js",
    ]),
    outs = ["build_stamp"],
    cmd = """
        set -e
        OUT_FILE="$$PWD/$@"
        FRONTEND=$$(cd $$(dirname $(location package.json)) && pwd -P)
        cd "$$FRONTEND"
        # Skip if already built (e.g. CI downloads pre-built frontend artifact)
        if [ ! -d build ] || [ ! -f build/index.html ]; then
            npm ci --silent 2>/dev/null
            npm run build 2>&1
        fi
        # Copy build output next to the stamp file in bazel-out/.
        # rust-embed resolves #[folder] relative to CARGO_MANIFEST_DIR which
        # rules_rust sets to bazel-out/.../bin/crates/xpressclaw-server/.
        # From there, ../../frontend/build/ lands in bazel-out/.../bin/frontend/build/.
        rm -rf "$$(dirname "$$OUT_FILE")/build"
        cp -r build "$$(dirname "$$OUT_FILE")/build"
        # Stamp file contains a hash of the build output so Bazel's disk cache
        # invalidates the server compilation when frontend content changes.
        find build -type f | sort | xargs cat | shasum -a 256 | cut -d' ' -f1 > "$$OUT_FILE"
    """,
    local = True,
    visibility = ["//visibility:public"],
)
