load("//frontend:frontend.bzl", "frontend_build")

exports_files([
    "package.json",
    "package-lock.json",
])

# Builds the SvelteKit frontend as a tree artifact.
# Bazel tracks the entire build/ directory contents, so downstream
# crates (xpressclaw-server via rust-embed) properly invalidate
# when frontend assets change.
frontend_build(
    name = "build",
    srcs = glob([
        "src/**",
        "static/**",
        "*.config.*",
        "*.json",
        "postcss.config.js",
    ]),
    package_json = "package.json",
    visibility = ["//visibility:public"],
)
