load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

exports_files(["Cargo.toml"])

rust_binary(
    name = "xpressclaw",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    deps = [
        "//crates/xpressclaw-core",
        "//crates/xpressclaw-server",
        "@crates//:anyhow",
        "@crates//:chrono",
        "@crates//:clap",
        "@crates//:reqwest",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tokio",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
        "@crates//:urlencoding",
    ],
    visibility = ["//visibility:public"],
)
