[package]
name = "xpressclaw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for xpressclaw — the AI agent OS"

[features]
default = []
cuda = ["xpressclaw-core/cuda", "xpressclaw-server/cuda"]
metal = ["xpressclaw-core/metal", "xpressclaw-server/metal"]

[[bin]]
name = "xpressclaw"
path = "src/main.rs"

# xclaw shell bridge CLI (ADR-023 §7, task 5). Mounted inside non-MCP
# harness guests so agents can invoke xpressclaw verbs over a Unix
# socket. Unix-only at the Cargo level — target filter lives on the
# binary's use statements.
[[bin]]
name = "xclaw"
path = "src/bin/xclaw.rs"

[dependencies]
xpressclaw-core = { path = "../xpressclaw-core" }
xpressclaw-server = { path = "../xpressclaw-server" }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
urlencoding = "2"
# For the `c2w-smoke` subcommand (ADR-023). Removed alongside the
# subcommand once pi harness (task 4) ships.
wat = "1"
tempfile = "3"
