load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

exports_files(["Cargo.toml"])

rust_library(
    name = "xpressclaw-core",
    srcs = glob(["src/**/*.rs"]),
    compile_data = ["//:templates"],
    crate_features = ["local-llm"],
    edition = "2021",
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
    deps = [
        "@crates//:anyhow",
        "@crates//:async-stream",
        "@crates//:bollard",
        "@crates//:bytes",
        "@crates//:chrono",
        "@crates//:croner",
        "@crates//:encoding_rs",
        "@crates//:futures-util",
        "@crates//:hf-hub",
        "@crates//:llama-cpp-2",
        "@crates//:ready-agent-cog",
        "@crates//:reqwest",
        "@crates//:rusqlite",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:serde_yaml",
        "@crates//:sqlite-vec",
        "@crates//:sysinfo",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tokio-cron-scheduler",
        "@crates//:tokio-stream",
        "@crates//:tracing",
        "@crates//:uuid",
        "@crates//:zerocopy",
    ],
    visibility = ["//visibility:public"],
)

rust_test(
    name = "core_test",
    crate = ":xpressclaw-core",
    deps = [
        "@crates//:tempfile",
    ],
)
