[package]
name = "xpressclaw-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core runtime library for xpressclaw — the AI agent OS"

[features]
default = ["local-llm"]
local-llm = ["dep:llama-cpp-2", "dep:hf-hub", "dep:encoding_rs"]
metal = ["llama-cpp-2/metal"]
cuda = ["llama-cpp-2/cuda"]

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
zerocopy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
bollard = { workspace = true }
tokio-cron-scheduler = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
async-stream = "0.3"
ready-agent-cog = { workspace = true }
croner = "2"
bytes = "1"
sysinfo = "0.34"

# Local LLM (optional, enabled by default via "local-llm" feature)
llama-cpp-2 = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }
encoding_rs = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
