[package]
name = "xpressclaw-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Axum REST API server for xpressclaw"

[features]
default = ["local-llm"]
local-llm = ["xpressclaw-core/local-llm"]
cuda = ["xpressclaw-core/cuda"]
metal = ["xpressclaw-core/metal"]

[dependencies]
xpressclaw-core = { path = "../xpressclaw-core", default-features = false }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
async-stream = "0.3"
rust-embed = { workspace = true }
open = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
