[package]
name = "xpressclaw-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Tauri native desktop app for xpressclaw"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
reqwest = { workspace = true }
open = "5"
dirs = "6"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-opener = "2.5.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[[bin]]
name = "xpressclaw-desktop"
path = "src/main.rs"
